enabled thread analyser print statement in main thread

--- a/prj.conf
+++ b/prj.conf
@@ -84,3 +84,6 @@ CONFIG_ZBOSS_TRACE_LOG_LEVEL_DBG=y
 CONFIG_ZBOSS_OSIF_LOG_LEVEL_DBG=y
 CONFIG_ZIGBEE_LOGGER_EP_LOG_LEVEL_DBG=y
 CONFIG_ZBOSS_TRACE_MASK=0x00000C48
+CONFIG_THREAD_ANALYZER=y
+CONFIG_THREAD_ANALYZER_AUTO=y
+CONFIG_THREAD_ANALYZER_AUTO_INTERVAL=10
